--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -10,7 +10,7 @@
 #
 
                                      
-name: build, publish, and release
+name: download fresh emojis
 
 on:
   schedule:
@@ -30,22 +30,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
-    - name: Run Download
+    - name: Download the data
       run: |
         python ez_emoji/download.py
-    - name: Commit files
-      run: |
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git commit -m "Add changes" -a
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
-
-        2892650+jthop@users.noreply.github.com
-    - name: update file and push to remote
+    - name: Add, Commit, Push
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
