--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -27,13 +27,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    - name: setup py
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
-    - name: Download the data
-      run: |
-        python ez_emoji/download.py
+        python-version: '3.9'
+        cache: 'pipenv'
+    - run: python ez_emoji/download.py
     - name: Add, Commit, Push
       run: |
         git config --global user.name "github-actions[bot]"
