--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -26,17 +26,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
     - name: setup py
       uses: actions/setup-python@v2
       with:
-<<<<<<< HEAD
     - name: run my python
       run: python ez_emoji/download.py
 
-#    - uses: actions/checkout@v2
-#    - uses: actions/setup-python@v2
-    - uses: jannekem/run-python-script-action@v1
+    - name: run py code
+      uses: jannekem/run-python-script-action@v1
       with:
         script: |
           import os
@@ -44,7 +42,7 @@ jobs:
           for f in os.listdir():
               print(f)
     - name: Print errors
-      if: steps.script.outputs.error == 'true'
+      #if: steps.script.outputs.error == 'true'
       run: |
         printenv "SCRIPT_STDOUT"
         printenv "SCRIPT_STDERR"
@@ -52,16 +50,10 @@ jobs:
         SCRIPT_STDOUT: ${{ steps.script.outputs.stdout }}
         SCRIPT_STDERR: ${{ steps.script.outputs.stderr }} 
 
-
-=======
-        python-version: '3.9'
-    - run: python ez_emoji/download.py
->>>>>>> e8985a7d7ee3bc97ca743e0d36b3f5ebe912200d
     - name: Add, Commit, Push
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
         git add -A
         git commit -m "automated emoji download"
         git push
