--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -10,7 +10,7 @@
 #
 
                                      
-name: download fresh emojis
+name: download
 
 on:
   workflow_dispatch:
@@ -32,18 +32,14 @@ jobs:
       uses: actions/setup-python@v2
     - name: run my python
       run: python ez_emoji/downloader.py
-    - name: Print errors
-      run: |
-        printenv "SCRIPT_STDOUT"
-        printenv "SCRIPT_STDERR"
       env:
         SCRIPT_STDOUT: ${{ steps.script.outputs.stdout }}
         SCRIPT_STDERR: ${{ steps.script.outputs.stderr }} 
-   - name: Add, Commit, Push
-     run: |
-       git config --global user.name "github-actions[bot]"
-       git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-       git add -A
-       timestamp=$(date -u)
-       git commit -m "automated emoji download ${timestamp}" || exit 0
-       git push
+    - name: Add, Commit, Push
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add -A
+        timestamp=$(date -u)
+        git commit -m "automated emoji download ${timestamp}" || exit 0
+        git push
