--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -15,6 +15,8 @@ name: download
 on:
   workflow_dispatch:
   push:
+    branches:
+      - master
   schedule:
     # Runs "at minute 55 past every hour" (see https://crontab.guru)
     - cron: '00 23 * * 6'
